2008-07-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	* src/gnome-cmd-user-actions.cc:
	Fix for setting the current working directory to the remote inactive one (CTRL+., CTRL+LEFT/RIGHT)

2008-07-20  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con.cc:
	Fix for bug introduced in rev. #1669

2008-07-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-prepare-xfer-dialog.cc:
	Fix for upload problem

2008-07-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-ftp.h:
	* src/gnome-cmd-remote-dialog.cc:
	Removed superfluous code for GnomeCmdConFtp

2008-07-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con.h:
	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-remote-dialog.cc:
	Fixed problem #541404 (update of host names)

	* src/gnome-cmd-con-ftp.cc:
	Removed superfluous code for anonymous user handling

	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-ftp.h:
	Removed superfluous code for host_port handling

	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-ftp.h:
	Removed superfluous code for user_name handling

	* src/gnome-cmd-con-ftp.cc:
	Removed superfluous code for host_name handling

	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-ftp.h:
	Removed superfluous code for remote_dir handling

2008-07-14  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-ftp:
	Use specified uri for connection (instead of previous building from 'ftp:', host, port, dir, user, pswd)

2008-07-14  Dušan Hokův  <dusan@mirc.cz>

	* src/gnome-cmd-xfer.cc:
	* src/gnome-cmd-xfer-progress-win.cc:
	* src/gnome-cmd-xfer-progress-win.h:
	New progress indicator for individual files for transfer dialogs

2008-07-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer/viewer-window.cc:
	Fix for intviewer menu entry
